Fixed align issue with header buttons

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
 	font-size: 13px;
 	font-family: 'Lora', Georgia, serif;
     color: #444444;
-    min-width: 1200px;
+    min-width: 1080px;
 }
 
 a {
@@ -53,7 +53,7 @@ button:focus {
 /** Custom UI Elements **/
 
 .btn {
-    padding: 4px 8px;
+    padding: 3px 7px;
     border: 1px solid #c0c0c0;
     border-radius: 2px;
     font-size: 14px;
@@ -79,15 +79,6 @@ header {
     top: 0;
 }
 
-header h1 {
-    font-family: 'Montserrat', Arial, sans-serif;
-    margin: 10px;
-    font-size: 22px;
-    color: #F7F7F7;
-    position: fixed;
-    right: 0;
-}
-
 header ul {
     position: fixed;
     top: 0;
@@ -96,7 +87,19 @@ header ul {
 }
 
 header ul li {
-    display: inline-block;
+    display: block;
+    float: left;
+}
+
+.logo {
+    width: 25px;
+    height: 24px;
+    margin: 2px;
+    border-radius: 2px;
+    text-align: center;
+    font-size: 20px;
+    background-color: #2980b9;
+    color: white;
 }
 
 footer {
